# client

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  FEATURES.md  README.md  build_cod1.ps1  cod1reloaded.ini  manifest.json  release.ps1
.github/workflows/: build.yml  release.yml
docs/: cod1_symbols.md  lean_fix_reference.md  mss32_proxy.md
src/: avatar_overlay.cpp  avatar_overlay.h  cpu_affinity.cpp  cpu_affinity.h  demo_upload.cpp  demo_upload.h  discord_rpc.cpp  discord_rpc.h  engine_2d.cpp  engine_2d.h  fps_cap.cpp  fps_cap.h  frame_limiter.cpp  frame_limiter.h  fso_disable.cpp  fso_disable.h  fullscreen_patch.cpp  fullscreen_patch.h  lean_amplify.cpp  lean_amplify.h  lean_fix.cpp  lean_fix.h  logger.cpp  logger.h  main.cpp  mss32_proxy.def  patches.cpp  patches.h  process_priority.cpp  process_priority.h  swing_fix.cpp  swing_fix.h  toast.cpp  toast.h  updater.cpp  updater.h  version_patch.cpp  version_patch.h  viewheight_fix.cpp  viewheight_fix.h  (+6 more)
src/core/: logger.cpp  logger.h  main.cpp  patches.cpp  patches.h  toast.cpp  toast.h
src/features/: avatar_overlay.cpp  avatar_overlay.h  demo_upload.cpp  demo_upload.h  discord_rpc.cpp  discord_rpc.h  engine_2d.cpp  engine_2d.h  updater.cpp  updater.h
src/gameplay/: lean_fix.cpp  lean_fix.h  swing_fix.cpp  swing_fix.h  viewheight_fix.cpp  viewheight_fix.h
src/netcode/: antilag.cpp  antilag.h  competitive.cpp  competitive.h  protocol_patch.cpp  protocol_patch.h  version_gate.cpp  version_gate.h  version_patch.cpp  version_patch.h
src/performance/: cpu_affinity.cpp  cpu_affinity.h  fps_cap.cpp  fps_cap.h  frame_limiter.cpp  frame_limiter.h  fso_disable.cpp  fso_disable.h  process_priority.cpp  process_priority.h  working_set.cpp  working_set.h
src/video/: fullscreen_patch.cpp  fullscreen_patch.h  widescreen_fix.cpp  widescreen_fix.h  window_patch.cpp  window_patch.h
